<resources>
    <string name="app_name">Salik</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCkIQIYmyEFzfklegCQNZYqgTeFepKbheY</string>
    <string name="connection_error">Check Your Internet Connection!</string>
    <string name="take_order">Take Order</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="customer_number">Customer Number : </string>
    <string name="location">Location :</string>
    <string name="comment">Comment :</string>
    <string name="open_map">Open Map</string>
    <string name="call_client">Call Client</string>
    <string name="complete_order">Complete Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_complete">Order Complete</string>
    <string name="order_cancel">Order Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="clear_history">Clear History</string>
    <string name="order">Order :</string>

</resources>
