<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.me.salik.view.activity.TakeOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/order_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/customer_number"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:id="@+id/number_text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="55446677"
                android:layout_toRightOf="@+id/number_text"
                android:id="@+id/number"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/location"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:id="@+id/location_text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Al Sadd"
                android:layout_toRightOf="@+id/location_text"
                android:id="@+id/location"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/comment"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:id="@+id/comment_text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Hello I am Here"
                android:layout_toRightOf="@+id/comment_text"
                android:id="@+id/comment"
                android:maxLines="5"
                />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_map"
            android:textColor="@android:color/white"
            android:id="@+id/open_map"
            android:background="@drawable/take_order_button"
            android:drawableLeft="@drawable/icon_map1"
            android:layout_marginBottom="8dp"
            android:paddingLeft="14dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_client"
            android:id="@+id/call"
            android:textColor="@android:color/white"
            android:background="@drawable/login_button"
            android:drawableLeft="@drawable/icon_call"
            android:paddingLeft="8dp"
            android:layout_marginBottom="8dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_order"
            android:textColor="@android:color/white"
            android:id="@+id/complete"
            android:background="@drawable/complete_button"
            android:drawableLeft="@drawable/icon_complete"
            android:paddingLeft="10dp"
            android:layout_marginBottom="8dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_order"
            android:textColor="@android:color/white"
            android:background="@drawable/cancel_button"
            android:drawableLeft="@drawable/icon_cancel"
            android:paddingLeft="8dp"
            android:id="@+id/cancel"
            />
    </LinearLayout>
</RelativeLayout>
